# taikutsu

./: .gitignore  CMakeLists.txt  README.md  links úteis.txt
docs/: Plano1semanaDev.txt  links úteis.txt
include/taikutsu/: lembrete.txt
include/taikutsu/core/: AStar.h  GridMap.h  Types.h
src/app/: main.cpp
src/core/: AStar.cpp  GridMap.cpp
tests/: test_astar.cpp
